# PiTempHumid

./: README.md  pyproject.toml
packaging/scripts/: start_pi_temp_humid.sh
packaging/systemd/: pi_temp_humid.service  pi_temp_humid.user.service
pi_temp_humid/: __init__.py  cli.py  gui.py  storage.py
scripts/: install_service.sh
